--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@apollo/client": "^3.6.6",
     "@mantine/core": "^4.2.8",
     "@mantine/hooks": "^4.2.8",
+    "file-saver": "^2.0.5",
     "graphql": "^16.5.0",
+    "jszip": "^3.10.0",
+    "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
