--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@mantine/core": "^4.2.8",
+    "@mantine/dropzone": "^4.2.9",
     "@mantine/hooks": "^4.2.8",
     "file-saver": "^2.0.5",
     "graphql": "^16.5.0",
@@ -12,6 +13,8 @@
     "qrcode.react": "^3.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone-uploader": "^2.11.0",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "tabler-icons-react": "^1.48.1"
